# neutral-buoyancy

./: .gitignore  README.md  pyproject.toml
.omc/state/: hud-state.json  hud-stdin-cache.json
docs/: red-team-report.md
examples/: basic_usage.py
src/buoyancy/: __init__.py  calibrator.py  classifier.py  cli.py  core.py  memory.py  task.py  viz.py
src/buoyancy/adapters/: __init__.py  anthropic.py
tests/: test_calibrator.py  test_classifier.py  test_core.py  test_memory.py  test_viz.py
