[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neutral-buoyancy"
version = "0.1.0"
description = "Find the exact right amount of AI effort — adaptive token budget calibration with persistent memory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Hank" },
]
keywords = ["llm", "token-optimization", "adaptive-compute", "ai-agents", "calibration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.0.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
buoyancy = "buoyancy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/buoyancy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
